--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#262938</color>
-    <color name="colorPrimaryDark">#181A24</color>
+    <color name="colorPrimaryDark">#181a24</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorTransparentWhite">#cccccc</color>
+    <color name="colourGrey">#fafafa</color>
 </resources>
