--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -34,9 +34,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:animateLayoutChanges="true"
             android:id="@+id/linearlayout1"
-            android:visibility="gone"
             android:orientation="vertical">
 
             <TextView
@@ -56,7 +54,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv7"
+                        android:id="@+id/textView9"
                         android:text="Project By :"
                         android:textSize="15dp"
                         android:padding="5dp"/>
@@ -74,11 +72,11 @@
 
                 <Button
                     android:id="@+id/messageBtn"
-                    android:layout_width="150dp"
+                    android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="125dp"
                     android:background="@color/colorPrimaryDark"
-                    android:text="Write Message"
+                    android:text="Contact Author"
                     android:textColor="@color/colorWhite" />
 
             </TableLayout>
