--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -10,8 +10,77 @@
     android:background="@drawable/main_background">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/screen_area"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="WELCOME"
+            android:layout_marginTop="50dp"
+            android:textColor="@color/colorTransparentWhite"
+            android:textAlignment="center"
+            android:textSize="30dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="to"
+            android:textColor="@color/colorTransparentWhite"
+            android:textAlignment="center"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PROJECT CONNECT"
+            android:textColor="@color/colorTransparentWhite"
+            android:textAlignment="center"
+            android:textSize="28dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text=""/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Project Connect is a platform where one can "
+            android:padding="10dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorTransparentWhite"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="meet new people with similar interests "
+            android:padding="10dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorTransparentWhite"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="and collaborate to make new projects "
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="150dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorTransparentWhite"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Made in JIIT with Love.. "
+            android:padding="10dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorTransparentWhite"/>
+
+
+    </LinearLayout>
 </RelativeLayout>
